[gd_scene load_steps=3 format=3 uid="uid://c2all8fomw1kn"]

[ext_resource type="Script" path="res://main.gd" id="1_s5xy4"]
[ext_resource type="PackedScene" uid="uid://bl6nik3o123o3" path="res://burbuja.tscn" id="2_8hruh"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s5xy4")

[node name="MenuPrincipal" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ElegirNivel" type="Button" parent="MenuPrincipal"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Salir" type="Button" parent="MenuPrincipal"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="MainGame" type="Node2D" parent="."]

[node name="Camara" type="Camera2D" parent="MainGame"]

[node name="SeleccionNiveles" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Nivel1" type="Button" parent="SeleccionNiveles"]
layout_mode = 0
offset_left = -162.0
offset_top = 62.0
offset_right = -101.0
offset_bottom = 93.0
text = "Nivel 1"

[node name="Nivel2" type="Button" parent="SeleccionNiveles"]
layout_mode = 0
offset_top = 54.0
offset_right = 61.0
offset_bottom = 85.0
text = "Nivel 2"

[node name="Nivel3" type="Button" parent="SeleccionNiveles"]
layout_mode = 0
offset_left = 203.0
offset_top = 72.0
offset_right = 264.0
offset_bottom = 103.0
text = "Nivel 3"

[node name="Burbuja" parent="." instance=ExtResource("2_8hruh")]
visible = false

[connection signal="pressed" from="SeleccionNiveles/Nivel1" to="." method="_on_nivel_1_pressed"]
[connection signal="pressed" from="SeleccionNiveles/Nivel2" to="." method="_on_nivel_2_pressed"]
[connection signal="pressed" from="SeleccionNiveles/Nivel3" to="." method="_on_nivel_3_pressed"]
